@@ -464,6 +464,7 @@ NULL, /* lastchange */
 /* 
  * main.c
  */
+0, /* is_gtkw_save_file */
 #ifdef MAC_INTEGRATION
 NULL, /* finder_name_integration */
 #endif
@@ -1711,6 +1712,7 @@ void reload_into_new_context(void)
  strcpy2_into_new_context(new_globals, &new_globals->skip_end, &GLOBALS->skip_end);
 
  /* main.c */
+ new_globals->is_gtkw_save_file  = GLOBALS->is_gtkw_save_file;
  new_globals->use_toolbutton_interface = GLOBALS->use_toolbutton_interface;
  new_globals->optimize_vcd = GLOBALS->optimize_vcd;
  strcpy2_into_new_context(new_globals, &new_globals->winname, &GLOBALS->winname); /* for page swapping */
